--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A modern React blog website" />
-    <title>React Blog</title>
+    <meta name="description" content="A modern blog website" />
+    <title>BlogTime</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
