--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,31 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A modern blog website" />
-    <title>BlogTime</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#007bff" />
+    <meta
+      name="description"
+      content="BlogTime - A modern, responsive blog platform for sharing insights about web development, programming, and technology"
+    />
+    <meta
+      name="keywords"
+      content="blog, technology, web development, programming, react, javascript"
+    />
+    <meta name="author" content="BlogTime" />
+
+    <!-- Mobile Web App Capable -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="BlogTime" />
+
+    <!-- Prevent zoom on form inputs (iOS) -->
+    <meta name="format-detection" content="telephone=no" />
+
+    <title>BlogTime - Modern Blog Platform</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
